
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct timeval {int tv_sec; int tv_usec; } ;
struct itimerval {struct timeval const it_interval; struct timeval const it_value; } ;


 int EINVAL ;
 int atexit (int (*) ()) ;
 int errno ;
 int error (char*) ;
 scalar_t__ is_timeval_eq (struct timeval const*,struct timeval const*) ;
 scalar_t__ one_shot ;
 int start_timer_thread () ;
 int stop_timer_thread () ;
 int timer_interval ;
 scalar_t__ timer_thread ;

int setitimer(int type, struct itimerval *in, struct itimerval *out)
{
 static const struct timeval zero;
 static int atexit_done;

 if (out != ((void*)0))
  return errno = EINVAL,
   error("setitimer param 3 != NULL not implemented");
 if (!is_timeval_eq(&in->it_interval, &zero) &&
     !is_timeval_eq(&in->it_interval, &in->it_value))
  return errno = EINVAL,
   error("setitimer: it_interval must be zero or eq it_value");

 if (timer_thread)
  stop_timer_thread();

 if (is_timeval_eq(&in->it_value, &zero) &&
     is_timeval_eq(&in->it_interval, &zero))
  return 0;

 timer_interval = in->it_value.tv_sec * 1000 + in->it_value.tv_usec / 1000;
 one_shot = is_timeval_eq(&in->it_interval, &zero);
 if (!atexit_done) {
  atexit(stop_timer_thread);
  atexit_done = 1;
 }
 return start_timer_thread();
}
